# rtid-cli

./: CREDITS  Cargo.toml  README.md
src/: main.rs
